Prevent input to overflow its container

--- a/js/search/_search.scss
+++ b/js/search/_search.scss
@@ -11,7 +11,7 @@
       display: none;
     }
     input {
-      max-width: 30em;
+      max-width: 100%;
       padding-right: 0.245em;
     }
     .iconic.magnifying_glass {
